# iscore-addon-staticanalysis

./: CMakeLists.txt  README.md  iscore_plugin_staticanalysis.cpp  iscore_plugin_staticanalysis.hpp  score_addon_staticanalysis.cpp  score_addon_staticanalysis.hpp  score_plugin_staticanalysis.cpp  score_plugin_staticanalysis.hpp
StaticAnalysis/: CppGenerator.cpp  CppGenerator.hpp  ReactiveIS.cpp  ReactiveIS.hpp  ScenarioGenerator.cpp  ScenarioGenerator.hpp  ScenarioMetrics.cpp  ScenarioMetrics.hpp  ScenarioVisitor.cpp  ScenarioVisitor.hpp  Statistics.cpp  Statistics.hpp  TAConversion.cpp  TAConversion.hpp  TIKZConversion.cpp  TIKZConversion.hpp
